# SIT-CAPSTONE

./: 122-QThreading.py  UPDATE.txt  pyproject.toml  required_dependencies.txt
API_scripts/: mongoApi.py  socket_funcs.py
IWSP_venv/Scripts/: activate  activate.bat
py_ui_files/: changeStatus_window.py  edit_ganttChart_window.py  issueExtention_calendar_window.py  login_window.py  members_addMembers_window.py  newProj_window.py  projectWindow.py  projects_page.py  raiseIssue.py
pyqt5_files/: add_newDocs_window.py  add_newDocs_window.ui  changeStatus_window.py  changeStatus_window.ui  docsCategory_window.py  docsCategory_window.ui  edit_ganttChart_choose_date_range_window.py  edit_ganttChart_choose_date_range_window.ui  edit_ganttChart_window.ui  issueExtention_calendar_window.ui  issue_window.py  issue_window.ui  login_window.py  login_window.ui  members_addMembers_window.py  members_addMembers_window.ui  newProj_window.ui  projectWindow.py  projectWindow.ui  projects_page.ui  raiseIssue.py  raiseIssue.ui  workFlow_editor.py  workFlow_editor.ui
pyui_files/: newProj_window.py
ui_files/: add_project.py  login_window.py  main_page.py  main_window.py  proj_info.py  proj_issues.py  proj_list.py  proj_page.py  proj_settings.py  proj_window.py  signUp.py  sign_up.py  stackedWidget_example
